Added support for UiAutomator2 capabilities